== Krinkle BaseTool 0.3 ==

THIS IS NOT A RELEASE YET

== Changes since 0.2 ==
* (JIRA KRINKLE-6) Use Toolserver Intuition instance to determine <html dir>
  and <html lang>.
* Droppping default attributes for <link> and <script>. We're using HTML5 structure.
* (JIRA KRINKLE-8) Output protocol-url and support canonical urls
  kfGetWikiData functions now return the 'url' property as protocol-relative.
  A new 'canonical_url' property was added that still contains a full url including protocol
  (canonical url have the http-protocol, which matches the canonical url WMF uses).
* Deprecated GlobalConfig::getDebugMode() in favor of GlobalConfig::isDebugMode()
* If debug mode is enabled, InitTools sets error_reporting( E_ALL ); and
  ini_set( 'display_errors', 1 );
* getParamVar now uses isset() instead of strlen() to decide wether to use the
  fallback value. So that &foo= will give an empty string as intended.

== Krinkle BaseTool 0.2 ==
2012-01-29

=== Changes since 0.1 ===
* Added GlobalConfig.
* Added Html, HtmlSelect, Request. Based on MediaWiki.
* First published in Krinkle's Toolserver SVN repository under [krinkle]/trunk/common.
  https://svn.toolserver.org/svnroot/krinkle/trunk/common

== Krinkle BaseTool 0.1 ==
2011-01-15

Initial version checked into Subversion as of 2011-01-15.