@@ -15,6 +15,8 @@ THIS IS NOT A RELEASE YET
   ini_set( 'display_errors', 1 );
 * getParamVar now uses isset() instead of strlen() to decide wether to use the
   fallback value. So that &foo= will give an empty string as intended.
+* Removed global kfEscapeHTML() (was a wrapper for htmlentities, ENT_QUOTES, UTF-8).
+  No need to entity encode everything, plain calls to htmlspecialchars() are good enough.
 
 == Krinkle BaseTool 0.2 ==
 2012-01-29
